--- a/style.css
+++ b/style.css
@@ -86,3 +86,11 @@ body {
   max-height: 500px;
   padding: 12px 16px;
 }
+
+.gradient-text {
+  background: linear-gradient(90deg, #00f2ff, #7200fe);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
