--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: sans-serif;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-color: #1e1e1e;
   color: white;
 }
