--- a/style.css
+++ b/style.css
@@ -53,21 +53,21 @@ body {
   opacity: 0;
 }
 
-.navbar a:hover::before {
+.navbar a.active::before {
   opacity: 1;
 }
 
 .navbar a:hover {
   color: #00f2ff;
   transform: translateY(-2px);
-  box-shadow:0 0 16px rgba(0, 242, 255, 0.7), 0 0 30px rgba(114, 0, 254, 0.5);
+  box-shadow: 0 0 12px rgba(0, 242, 255, 0.8);
 }
 
 .navbar a.active {
   background: #111;
   color: #00f2ff;
   font-weight: 600;
-  box-shadow: 0 0 12px rgba(0, 242, 255, 1), 0 0 24px rgba(114, 0, 254, 1);
+  box-shadow: 0 0 16px rgba(0, 242, 255, 0.7), 0 0 30px rgba(114, 0, 254, 0.5);
 }
 
 .content {
