--- a/League./style.css
+++ b/League./style.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
-  font-family: 'Segoe UI', sans-serif;
-  background: #242628;
-  color: #f0f0f0;
+  font-family: sans-serif;
+  background-color: #1e1e1e;
+  color: white;
 }
 
 .container {
